@@ -1,9 +1,9 @@
 Obsoletes: pupmod-rsync-test >= 0.0.1
 Requires: pupmod-simp-compliance_markup < 2.0.0-0
-Requires: pupmod-simp-compliance_markup >= 1.0.1-0
+Requires: pupmod-simp-compliance_markup >= 1.0.2-0
 Requires: pupmod-simp-rsyslog < 6.0.0-0
-Requires: pupmod-simp-rsyslog >= 5.1.0-0
-Requires: pupmod-simp-simpcat < 6.0.0-0
-Requires: pupmod-simp-simpcat >= 5.0.1-0
-Requires: pupmod-simp-stunnel < 5.0.0-0
-Requires: pupmod-simp-stunnel >= 4.2.8-0
+Requires: pupmod-simp-rsyslog >= 5.1.1-0
+Requires: pupmod-simp-simpcat < 7.0.0-0
+Requires: pupmod-simp-simpcat >= 6.0.0-0
+Requires: pupmod-simp-stunnel < 6.0.0-0
+Requires: pupmod-simp-stunnel >= 5.0.0-0
