@@ -1,7 +1,7 @@
 {
   "name": "simp-rsync",
-  "version": "4.2.3",
-  "author": "simp",
+  "version": "5.0.0",
+  "author": "SIMP Team",
   "summary": "manage and rsync server, secured by stunnel",
   "license": "Apache-2.0",
   "source": "https://github.com/simp/pupmod-simp-rsync",
@@ -15,19 +15,19 @@
   "dependencies": [
     {
       "name": "simp/rsyslog",
-      "version_requirement": ">= 5.1.0 < 6.0.0"
+      "version_requirement": ">= 5.1.1 < 6.0.0"
     },
     {
       "name": "simp/stunnel",
-      "version_requirement": ">= 4.2.8 < 5.0.0"
+      "version_requirement": ">= 5.0.0 < 6.0.0"
     },
     {
       "name": "simp/simpcat",
-      "version_requirement": ">= 5.0.1 < 6.0.0"
+      "version_requirement": ">= 6.0.0 < 7.0.0"
     },
     {
       "name": "simp/compliance_markup",
-      "version_requirement": ">= 1.0.1 < 2.0.0"
+      "version_requirement": ">= 1.0.2 < 2.0.0"
     }
   ],
   "operatingsystem_support": [
